--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </li>
             </ul>
         </nav>
-        <ul class="auth-nav break">
+        <ul class="auth-nav">
             <li class="unit">
                 <a href="mailto:info@devstudio.com" class="link-header-font">
                     <svg class="mark" width="16" height="11">
@@ -115,7 +115,7 @@
             </div>
         </section>
         <section class="middle container">
-            <ul class="details break">
+            <ul class="details">
                 <li class="box">
                     <div class="inside">
                         <svg class="size">
@@ -172,7 +172,7 @@
             <h2 class="title-busy">Чем мы занимаемся</h2>
             <!--Графический контент:фотография-->
             <!--Чем мы занимаемся-->
-            <ul class="details break">
+            <ul class="details">
                 <li class="space">
                     <a href="" class="decoration">
                         <div class="doit">
@@ -210,14 +210,14 @@
 
         <section class="team container">
             <h2 class="title-busy">Наша команда</h2>
-            <ul class="com break">
+            <ul class="com">
                 <li class="member">
                     <img src="./images/john.jpg" alt="Джон Смитт" width="270" height="260" />
 
                     <h3 class="name">John Smith</h3>
                     <p class="duty">Product Designer</p>
 
-                    <ul class="link break">
+                    <ul class="link">
                         <li class="social-link">
                             <a class="soc" href="https://www.instagram.com" aria-label="Ссылка на Instagram">
                                 <svg class="font">
@@ -343,7 +343,7 @@
                     <img src="./images/martin.jpg" alt="Мартин Доу" width="270" height="260" />
                     <h3 class="name">Martin Doe</h3>
                     <p class="duty">Product Designer</p>
-                    <ul class="link break">
+                    <ul class="link">
                         <li class="social-link">
                             <a class="soc" href="https://www.instagram.com" aria-label="Ссылка на Instagram">
                                 <svg class="font">
@@ -386,7 +386,7 @@
         <section class="clients container">
             <h2 class="title-busy">Постоянные клиенты</h2>
 
-            <ul class="logotype break">
+            <ul class="logotype">
                 <li class="label">
                     <a class="icon" href="" aria-label="ссылка на логотип1 ">
                         <svg class="brand" width="44" height="49">
@@ -442,7 +442,7 @@
                 </a>
                 <address>
             <p class="address">г.Киев, п-т Леси Украинки,26</p>
-            <ul class="cont break">
+            <ul class="cont">
               <li class="item">
                 <a href="info@example.com" class="footer-contacts">
                   info@example.com
@@ -459,7 +459,7 @@
 
             <div class="join-us">
                 <p class="title">присоединяйтесь</p>
-                <ul class="footer-links break">
+                <ul class="footer-links">
                     <li class="links">
                         <a href="" aria-label="Ссылка на Instagram"></a>
                         <svg class="link-id" width="20" height="20">
