--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/main.min.css>" />
+    <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 <body class="backgroung">
@@ -31,7 +31,7 @@
                 </li>
             </ul>
         </nav>
-        <ul class="auth-nav break">
+        <ul class="auth-nav">
             <li class="unit">
                 <a href="mailto:info@devstudio.com " class="link-header-font">
                     <svg class="mark" width="16 " height="11 ">
@@ -56,7 +56,7 @@
         <h1 class="projects">Наши проекты</h1>
 
         <section class="shop container">
-            <ul class="detail break">
+            <ul class="detail">
                 <li class="click">
                     <button type="button " class="button-list">Все</button>
                 </li>
@@ -74,7 +74,7 @@
                 </li>
             </ul>
 
-            <ul class="container-flex break">
+            <ul class="container-flex">
                 <li class="card">
                     <a href=" " class="decoration">
                         <div class="optic">
@@ -239,7 +239,7 @@
                 </a>
                 <address>
             <p class="address">г.Киев, п-т Леси Украинки,26</p>
-            <ul class="cont break">
+            <ul class="cont">
               <li class="item">
                 <a href="info@example.com " class="footer-contacts">
                   info@example.com
@@ -256,7 +256,7 @@
 
             <div class="join-us">
                 <p class="title">присоединяйтесь</p>
-                <ul class="footer-links break">
+                <ul class="footer-links">
                     <li class="links">
                         <a href=" " aria-label="Ссылка на Instagram "></a>
                         <svg class="link-id" width="20 " height="20 ">
