--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
         </section>
     </main>
 
-    <footer class="footer container">
-        <div class="footer-flex">
+    <footer class="footer-page">
+        <div class="container footer">
             <div class="footer-contact">
                 <a href="" class="decorate">
                     <span class="foot-web">Web</span>
