--- a/portfolio.html
+++ b/portfolio.html
@@ -230,8 +230,8 @@
             </ul>
         </section>
     </main>
-    <footer class="footer container">
-        <div class="footer-flex">
+    <footer class="footer-page">
+        <div class="container footer">
             <div class="footer-contact">
                 <a href=" " class="decorate">
                     <span class="foot-web">Web</span>
